--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <form action="#" method="POST" class="form" id="login-form">
+        <form method="POST" class="form" id="login-form">
             <h3 class="heading">Đăng Nhập</h3>
   
             <div class="spacer"></div>
@@ -29,7 +29,7 @@
             <button type="button" id="signup-btn" class="form-submit" src="">Đăng ký</button>
         </form>
 
-        <form action="#" method="POST" class="form hidden" id="signup-form">
+        <form method="POST" class="form hidden" id="signup-form">
             <h3 class="heading">Đăng Ký</h3>
   
             <div class="spacer"></div>
@@ -58,7 +58,9 @@
                 <span class="form-message" data-error="Vui lòng nhập lại mật khẩu"></span>
             </div>
 
+            <button type="submit" class="form-submit">Đăng nhập</button>
             <button type="submit" class="form-submit">Đăng ký</button>
+           
         </form>
     </div>
 
